--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEAMROHITOFFICIAL45_LIVE</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
         @keyframes heartbeat {
             0% { transform: scale(1); box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); }
@@ -18,37 +19,44 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Roboto', sans-serif;
             text-align: center;
-            background: #121212;
-            color: white;
+            background: #181818; /* Dark background */
+            color: #f5f5f5; /* Light gray text */
             padding: 20px;
         }
+
         h1 {
-            font-size: 28px;
+            font-size: 36px;
             text-transform: uppercase;
             margin-bottom: 20px;
-            color: #f00; /* Red color for heading */
+            color: #FFDC00; /* Yellow accent color for heading */
+            letter-spacing: 2px;
         }
+
         .event-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
         }
+
         .event {
             width: 400px;
-            background: #222;
+            background: #222; /* Slightly lighter dark background */
             border-radius: 12px;
             overflow: hidden;
             position: relative;
             padding-bottom: 15px;
             animation: heartbeat 3s infinite;
-            transition: transform 0.3s;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
+
         .event:hover {
             transform: scale(1.03);
+            box-shadow: 0 0 20px rgba(255, 140, 0, 0.8); /* Orange glow on hover */
         }
+
         .event img {
             width: 100%;
             height: 220px;
@@ -56,36 +64,31 @@
             border-top-left-radius: 12px;
             border-top-right-radius: 12px;
         }
+
         .event-content {
             padding: 15px;
         }
+
         .title {
-            font-size: 18px;
-            font-weight: bold;
-            color: #FFD700; /* Gold color for title */
+            font-size: 20px;
+            font-weight: 500;
+            color: #FFDC00; /* Yellow color for title */
             margin-bottom: 5px;
         }
+
         .league {
             font-size: 14px;
-            color: #bbb;
+            color: #ccc;
             margin-bottom: 10px;
         }
-        .viewer-count {
-            font-size: 14px;
-            color: #ff5733; /* Light red color for viewer count */
-            margin-bottom: 10px;
-        }
-        .match-time {
-            font-size: 14px;
-            color: #999;
-            margin-bottom: 10px;
-        }
+
         .buttons {
             display: flex;
             flex-direction: column;
             gap: 10px;
             margin-top: 15px;
         }
+
         .watch-btn {
             display: block;
             width: 90%;
@@ -93,7 +96,7 @@
             background: transparent;
             color: white;
             text-decoration: none;
-            border: 2px solid #FFD700; /* Gold border */
+            border: 2px solid #FFDC00; /* Yellow border */
             border-radius: 8px;
             font-size: 16px;
             font-weight: bold;
@@ -101,12 +104,14 @@
             text-align: center;
             transition: all 0.3s ease-in-out;
         }
+
         .watch-btn:hover {
-            background: #FFD700; /* Gold background */
+            background: #FFDC00; /* Yellow background */
             color: black;
             transform: scale(1.1);
-            box-shadow: 0 0 25px #FFD700;
+            box-shadow: 0 0 20px rgba(255, 140, 0, 0.8); /* Orange glow on hover */
         }
+
         .live-badge {
             position: absolute;
             top: 10px;
@@ -139,12 +144,8 @@
                     const eventDiv = document.createElement("div");
                     eventDiv.classList.add("event");
 
-                    let eventDate = new Date(event.startTime);
-                    let formattedDate = eventDate.toLocaleDateString();
-                    let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
                     let isLive = event.status === "LIVE"; // Check if match is live
                     let videoLink = event.dai_url ? `https://teamrohitofficalnew.netlify.app?videoUrl=${encodeURIComponent(event.dai_url)}` : "#";
-                    let viewers = event.viewers || "N/A";  // Get viewer count if available, else show N/A
 
                     eventDiv.innerHTML = `
                         <img src="${event.src}" alt="${event.title}">
@@ -152,8 +153,6 @@
                         <div class="event-content">
                             <div class="title">${event.title}</div>
                             <div class="league">${event.event_name}</div>
-                            <div class="match-time">Match Time: ${formattedDate}, ${formattedTime}</div>
-                            <div class="viewer-count">Viewers: ${viewers}</div>
                             <div class="buttons">
                                 ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a>` : ''}
                                 ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Ad-Free</a>` : ''}
