--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEAMROHITOFFICIAL45_LIVE</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <title>TEAMROHITOFFICIAL45_LIVE - IPL</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Staatliches&display=swap" rel="stylesheet">
     <style>
         @keyframes heartbeat {
             0% { transform: scale(1); box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); }
-            50% { transform: scale(1.02); box-shadow: 0 0 20px rgba(255, 0, 0, 0.8); }
+            50% { transform: scale(1.05); box-shadow: 0 0 20px rgba(255, 0, 0, 0.8); }
             100% { transform: scale(1); box-shadow: 0 0 10px rgba(255, 0, 0, 0.5); }
         }
 
@@ -22,16 +22,17 @@
             font-family: 'Roboto', sans-serif;
             text-align: center;
             background: #181818; /* Dark background */
-            color: #f5f5f5; /* Light gray text */
+            color: white;
             padding: 20px;
         }
 
         h1 {
-            font-size: 36px;
+            font-family: 'Staatliches', cursive;
+            font-size: 40px;
             text-transform: uppercase;
             margin-bottom: 20px;
-            color: #FFDC00; /* Yellow accent color for heading */
-            letter-spacing: 2px;
+            color: #FF5733; /* Orange for IPL vibe */
+            letter-spacing: 3px;
         }
 
         .event-container {
@@ -42,7 +43,7 @@
         }
 
         .event {
-            width: 400px;
+            width: 350px;
             background: #222; /* Slightly lighter dark background */
             border-radius: 12px;
             overflow: hidden;
@@ -53,13 +54,13 @@
         }
 
         .event:hover {
-            transform: scale(1.03);
-            box-shadow: 0 0 20px rgba(255, 140, 0, 0.8); /* Orange glow on hover */
+            transform: scale(1.05);
+            box-shadow: 0 0 30px rgba(255, 87, 34, 0.8); /* IPL Orange Glow on hover */
         }
 
         .event img {
             width: 100%;
-            height: 220px;
+            height: 200px;
             object-fit: cover;
             border-top-left-radius: 12px;
             border-top-right-radius: 12px;
@@ -71,8 +72,8 @@
 
         .title {
             font-size: 20px;
-            font-weight: 500;
-            color: #FFDC00; /* Yellow color for title */
+            font-weight: bold;
+            color: #FFDC00; /* Yellow for title */
             margin-bottom: 5px;
         }
 
@@ -96,7 +97,7 @@
             background: transparent;
             color: white;
             text-decoration: none;
-            border: 2px solid #FFDC00; /* Yellow border */
+            border: 2px solid #FFDC00; /* IPL Yellow border */
             border-radius: 8px;
             font-size: 16px;
             font-weight: bold;
@@ -106,17 +107,17 @@
         }
 
         .watch-btn:hover {
-            background: #FFDC00; /* Yellow background */
+            background: #FFDC00; /* IPL Yellow background */
             color: black;
             transform: scale(1.1);
-            box-shadow: 0 0 20px rgba(255, 140, 0, 0.8); /* Orange glow on hover */
+            box-shadow: 0 0 20px rgba(255, 140, 0, 0.8); /* IPL Orange Glow on hover */
         }
 
         .live-badge {
             position: absolute;
             top: 10px;
             left: 10px;
-            background: red;
+            background: #FF5733; /* IPL Orange */
             color: white;
             font-size: 12px;
             font-weight: bold;
@@ -128,7 +129,7 @@
 </head>
 <body>
 
-    <h1>Live Events</h1>
+    <h1>Live IPL Events</h1>
     <div class="event-container" id="events"></div>
 
     <script>
