--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEAMROHITOFFICIAL45_LIVE - IPL</title>
+    <title>TEAMROHITOFFICIAL45_LIVE</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Staatliches&display=swap" rel="stylesheet">
     <style>
         @keyframes heartbeat {
@@ -131,7 +131,7 @@
             background: transparent;
             color: white;
             text-decoration: none;
-            border: 2px solid #FFDC00; /* IPL Yellow border */
+            border: 2px solid #FFDC00; /* JioHotstar Yellow border */
             border-radius: 8px;
             font-size: 16px;
             font-weight: bold;
@@ -141,17 +141,17 @@
         }
 
         .watch-btn:hover {
-            background: #FFDC00; /* IPL Yellow background */
+            background: #FFDC00; /* JioHotstar Yellow background */
             color: black;
             transform: scale(1.1);
-            box-shadow: 0 0 20px rgba(255, 140, 0, 0.8); /* IPL Orange Glow on hover */
+            box-shadow: 0 0 20px rgba(255, 140, 0, 0.8); /* JioHotstar Orange Glow on hover */
         }
 
         .live-badge {
             position: absolute;
             top: 10px;
             left: 10px;
-            background: #FF5733; /* IPL Orange */
+            background: #FF5733; /* JioHotstar Orange */
             color: white;
             font-size: 12px;
             font-weight: bold;
@@ -175,7 +175,7 @@
         </div>
     </div>
 
-    <h1>Live IPL Events</h1>
+    <h1>Live Events</h1>
     <div class="event-container" id="events"></div>
 
     <script>
