--- a/index.html
+++ b/index.html
@@ -5,157 +5,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEAMROHITOFFICIAL45_LIVE</title>
     <style>
-        /* General reset and body styling */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        @keyframes heartbeat {
+            0% { transform: scale(1); box-shadow: 0 0 15px rgba(255, 215, 0, 0.6); }
+            50% { transform: scale(1.05); box-shadow: 0 0 30px rgba(255, 215, 0, 0.8); }
+            100% { transform: scale(1); box-shadow: 0 0 15px rgba(255, 215, 0, 0.6); }
+        }
+
+        @keyframes livePulse {
+            0% { transform: scale(1); opacity: 1; }
+            50% { transform: scale(1.1); opacity: 0.9; }
+            100% { transform: scale(1); opacity: 1; }
         }
 
         body {
-            font-family: 'Arial', sans-serif;
-            background: #121212;
+            font-family: 'Roboto', sans-serif;
+            background: #141414;
             color: #fff;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
             margin: 0;
-            transition: all 0.3s ease;
+            padding: 0;
+            overflow-x: hidden;
         }
 
         h1 {
-            font-size: 40px;
-            text-align: center;
+            font-size: 36px;
             text-transform: uppercase;
-            letter-spacing: 3px;
-            color: #ffcc00;
-            margin-bottom: 50px;
-            text-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
-            animation: fadeIn 1.5s ease-in-out forwards;
+            font-weight: 700;
+            margin: 20px;
+            text-align: center;
+            letter-spacing: 1.5px;
         }
 
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        /* Event container styling */
         .event-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 0 20px;
-            justify-items: center;
-            transition: all 0.3s ease;
+            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+            gap: 30px;
+            padding: 30px;
+            justify-content: center;
         }
 
-        /* Event item styling */
         .event {
-            width: 100%;
-            height: 450px;
-            background: #292929;
-            border-radius: 15px;
             position: relative;
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+            background: #222;
+            border-radius: 12px;
             overflow: hidden;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+            transform: scale(1);
+            transition: transform 0.3s ease;
+            animation: heartbeat 3s infinite;
+            cursor: pointer;
         }
 
         .event:hover {
             transform: scale(1.05);
-            box-shadow: 0px 15px 40px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
         }
 
         .event img {
             width: 100%;
-            height: 230px;
+            height: 200px;
             object-fit: cover;
-            border-radius: 15px 15px 0 0;
             transition: transform 0.3s ease;
         }
 
-        .event:hover img {
+        .event img:hover {
             transform: scale(1.1);
         }
 
         .event-content {
             padding: 20px;
-            height: 220px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            z-index: 1;
         }
 
         .title {
-            font-size: 22px;
+            font-size: 20px;
             font-weight: 700;
-            color: #fff;
-            text-transform: capitalize;
             margin-bottom: 10px;
+            color: #fff;
         }
 
         .league {
-            font-size: 14px;
+            font-size: 16px;
+            font-weight: 500;
             color: #bbb;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .buttons {
             display: flex;
             gap: 15px;
-            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         .watch-btn {
-            background: linear-gradient(135deg, #ffcc00, #ff6600);
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
             padding: 12px 20px;
+            background: linear-gradient(90deg, #ffae00, #ff6600);
+            color: white;
             text-decoration: none;
-            border-radius: 10px;
+            border-radius: 30px;
+            font-weight: 600;
             text-align: center;
-            transition: background 0.3s ease, transform 0.3s ease;
-            box-shadow: 0px 5px 15px rgba(255, 100, 0, 0.3);
+            transition: background 0.3s, transform 0.3s ease;
+            display: inline-block;
+            width: 45%;
+            min-width: 140px;
+            font-size: 16px;
         }
 
         .watch-btn:hover {
-            background: linear-gradient(135deg, #ff6600, #ffcc00);
-            transform: scale(1.1);
-            box-shadow: 0px 10px 20px rgba(255, 100, 0, 0.6);
+            background: linear-gradient(90deg, #ff6600, #ffae00);
+            transform: translateY(-5px);
         }
 
-        /* Live badge animation */
         .live-badge {
             position: absolute;
-            top: 20px;
-            left: 20px;
-            background: rgba(255, 0, 0, 0.8);
+            top: 15px;
+            left: 15px;
+            background: red;
             color: white;
             font-size: 14px;
-            font-weight: bold;
-            padding: 6px 12px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 12px rgba(255, 0, 0, 0.7);
-            opacity: 0;
-            animation: liveBadgePulse 2s infinite;
+            font-weight: 700;
+            padding: 8px 15px;
+            border-radius: 30px;
+            animation: livePulse 1.5s infinite;
         }
-
-        @keyframes liveBadgePulse {
-            0% { opacity: 0; transform: scale(1); }
-            50% { opacity: 1; transform: scale(1.1); }
-            100% { opacity: 0; transform: scale(1); }
-        }
-
     </style>
 </head>
 <body>
 
     <h1>Live Events</h1>
-
     <div class="event-container" id="events"></div>
 
     <script>
@@ -163,18 +140,17 @@
             try {
                 const response = await fetch("https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.json");
                 const data = await response.json();
-                
+
                 const container = document.getElementById("events");
                 container.innerHTML = ""; 
 
                 data.matches.forEach(event => {
                     const eventDiv = document.createElement("div");
                     eventDiv.classList.add("event");
-
                     let eventDate = new Date(event.startTime);
                     let formattedDate = eventDate.toLocaleDateString();
                     let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                    let isLive = event.status === "LIVE"; // Check if match is live
+                    let isLive = event.status === "LIVE"; 
                     let videoLink = event.dai_url ? `https://teamrohitofficalnew.netlify.app?videoUrl=${encodeURIComponent(event.dai_url)}` : "#";
 
                     eventDiv.innerHTML = `
