--- a/index.html
+++ b/index.html
@@ -3,136 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEAMROHITOFFICIAL45_LIVE</title>
+    <title>Live Events</title>
     <style>
-        @keyframes heartbeat {
-            0% { transform: scale(1); box-shadow: 0 0 15px rgba(255, 215, 0, 0.6); }
-            50% { transform: scale(1.05); box-shadow: 0 0 30px rgba(255, 215, 0, 0.8); }
-            100% { transform: scale(1); box-shadow: 0 0 15px rgba(255, 215, 0, 0.6); }
-        }
-
-        @keyframes livePulse {
-            0% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.1); opacity: 0.9; }
-            100% { transform: scale(1); opacity: 1; }
+        /* Resetting default styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
         body {
-            font-family: 'Roboto', sans-serif;
-            background: #141414;
+            font-family: 'Arial', sans-serif;
+            background-color: #121212;
             color: #fff;
-            margin: 0;
-            padding: 0;
             overflow-x: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
         h1 {
-            font-size: 36px;
-            text-transform: uppercase;
+            font-size: 40px;
+            color: #ff4b2b;
             font-weight: 700;
-            margin: 20px;
+            letter-spacing: 2px;
+            text-transform: uppercase;
             text-align: center;
-            letter-spacing: 1.5px;
+            margin-top: 20px;
+            margin-bottom: 40px;
         }
 
         .event-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 30px;
-            padding: 30px;
+            padding: 20px;
             justify-content: center;
+            width: 90%;
+            max-width: 1200px;
         }
 
-        .event {
-            position: relative;
-            background: #222;
-            border-radius: 12px;
+        .event-card {
+            background: #1f1f1f;
+            border-radius: 15px;
             overflow: hidden;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
-            transform: scale(1);
-            transition: transform 0.3s ease;
-            animation: heartbeat 3s infinite;
+            position: relative;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+            transition: all 0.3s ease-in-out;
             cursor: pointer;
         }
 
-        .event:hover {
-            transform: scale(1.05);
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+        .event-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.7);
         }
 
-        .event img {
+        .event-card img {
             width: 100%;
             height: 200px;
             object-fit: cover;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease-in-out;
         }
 
-        .event img:hover {
+        .event-card img:hover {
             transform: scale(1.1);
         }
 
-        .event-content {
+        .event-card-content {
             padding: 20px;
         }
 
-        .title {
-            font-size: 20px;
-            font-weight: 700;
-            margin-bottom: 10px;
+        .event-title {
+            font-size: 22px;
             color: #fff;
+            font-weight: bold;
+            margin-bottom: 15px;
         }
 
-        .league {
+        .event-league {
             font-size: 16px;
-            font-weight: 500;
             color: #bbb;
             margin-bottom: 20px;
-        }
-
-        .buttons {
-            display: flex;
-            gap: 15px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .watch-btn {
-            padding: 12px 20px;
-            background: linear-gradient(90deg, #ffae00, #ff6600);
-            color: white;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: 600;
-            text-align: center;
-            transition: background 0.3s, transform 0.3s ease;
-            display: inline-block;
-            width: 45%;
-            min-width: 140px;
-            font-size: 16px;
-        }
-
-        .watch-btn:hover {
-            background: linear-gradient(90deg, #ff6600, #ffae00);
-            transform: translateY(-5px);
         }
 
         .live-badge {
             position: absolute;
             top: 15px;
-            left: 15px;
-            background: red;
+            right: 15px;
+            background-color: #e74c3c;
             color: white;
+            padding: 5px 10px;
+            border-radius: 25px;
+            font-weight: 600;
             font-size: 14px;
-            font-weight: 700;
-            padding: 8px 15px;
-            border-radius: 30px;
-            animation: livePulse 1.5s infinite;
+            animation: pulse 1.5s infinite ease-in-out;
         }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+            50% {
+                transform: scale(1.1);
+                opacity: 0.7;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        .btn-group {
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            margin-top: 10px;
+        }
+
+        .watch-btn, .ad-free-btn {
+            background: linear-gradient(90deg, #ff4b2b, #ff8c00);
+            padding: 12px 20px;
+            border-radius: 30px;
+            color: #fff;
+            font-weight: 600;
+            text-decoration: none;
+            text-align: center;
+            transition: all 0.3s ease;
+            flex-grow: 1;
+        }
+
+        .watch-btn:hover, .ad-free-btn:hover {
+            transform: translateY(-5px);
+            background: linear-gradient(90deg, #ff8c00, #ff4b2b);
+        }
+
+        .watch-btn {
+            margin-right: 10px;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 30px;
+            }
+        }
+
     </style>
 </head>
 <body>
 
-    <h1>Live Events</h1>
+    <h1>Live Sports Events</h1>
     <div class="event-container" id="events"></div>
 
     <script>
@@ -142,26 +163,27 @@
                 const data = await response.json();
 
                 const container = document.getElementById("events");
-                container.innerHTML = ""; 
+                container.innerHTML = "";
 
                 data.matches.forEach(event => {
                     const eventDiv = document.createElement("div");
-                    eventDiv.classList.add("event");
+                    eventDiv.classList.add("event-card");
+
                     let eventDate = new Date(event.startTime);
                     let formattedDate = eventDate.toLocaleDateString();
                     let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                    let isLive = event.status === "LIVE"; 
+                    let isLive = event.status === "LIVE";
                     let videoLink = event.dai_url ? `https://teamrohitofficalnew.netlify.app?videoUrl=${encodeURIComponent(event.dai_url)}` : "#";
 
                     eventDiv.innerHTML = `
                         <img src="${event.src}" alt="${event.title}">
                         ${isLive ? `<div class="live-badge">LIVE</div>` : ""}
-                        <div class="event-content">
-                            <div class="title">${event.title}</div>
-                            <div class="league">${event.event_name}</div>
-                            <div class="buttons">
+                        <div class="event-card-content">
+                            <div class="event-title">${event.title}</div>
+                            <div class="event-league">${event.event_name}</div>
+                            <div class="btn-group">
                                 ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a>` : ''}
-                                ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Ad-Free</a>` : ''}
+                                ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="ad-free-btn">Ad-Free</a>` : ''}
                             </div>
                         </div>
                     `;
