--- a/index.html
+++ b/index.html
@@ -172,20 +172,20 @@
                     let formattedDate = eventDate.toLocaleDateString();
                     let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
                     let isLive = event.status === "LIVE";
-                    let videoLink = event.dai_url ? https://teamrohitofficalnew.netlify.app?videoUrl=${encodeURIComponent(event.dai_url)} : "#";
+                    let videoLink = event.dai_url ? `https://teamrohitofficalnew.netlify.app?videoUrl=${encodeURIComponent(event.dai_url)}` : "#";
 
-                    eventDiv.innerHTML = 
+                    eventDiv.innerHTML = `
                         <img src="${event.src}" alt="${event.title}">
-                        ${isLive ? <div class="live-badge">LIVE</div> : ""}
+                        ${isLive ? `<div class="live-badge">LIVE</div>` : ""}
                         <div class="event-card-content">
                             <div class="event-title">${event.title}</div>
                             <div class="event-league">${event.event_name}</div>
                             <div class="btn-group">
-                                ${event.dai_url ? <a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a> : ''}
-                                ${event.dai_url ? <a href="${videoLink}" target="_blank" class="ad-free-btn">Ad-Free</a> : ''}
+                                ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a>` : ''}
+                                ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="ad-free-btn">Ad-Free</a>` : ''}
                             </div>
                         </div>
-                    ;
+                    `;
 
                     container.appendChild(eventDiv);
                 });
