--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #121212;
+            background-color: #004b87; /* Mumbai Indians Blue */
             color: #fff;
             overflow-x: hidden;
             display: flex;
@@ -25,7 +25,7 @@
 
         h1 {
             font-size: 40px;
-            color: #ff4b2b;
+            color: #ffcc00; /* Mumbai Indians Yellow/Gold */
             font-weight: 700;
             letter-spacing: 2px;
             text-transform: uppercase;
@@ -91,8 +91,8 @@
             position: absolute;
             top: 15px;
             right: 15px;
-            background-color: #e74c3c;
-            color: white;
+            background-color: #ffcc00; /* Mumbai Indians Yellow */
+            color: #004b87; /* Mumbai Indians Blue */
             padding: 5px 10px;
             border-radius: 25px;
             font-weight: 600;
@@ -123,7 +123,7 @@
         }
 
         .watch-btn, .ad-free-btn {
-            background: linear-gradient(90deg, #ff4b2b, #ff8c00);
+            background: linear-gradient(90deg, #004b87, #ffcc00); /* Mumbai Indians Gradient */
             padding: 12px 20px;
             border-radius: 30px;
             color: #fff;
@@ -136,7 +136,7 @@
 
         .watch-btn:hover, .ad-free-btn:hover {
             transform: translateY(-5px);
-            background: linear-gradient(90deg, #ff8c00, #ff4b2b);
+            background: linear-gradient(90deg, #ffcc00, #004b87); /* Reverse Gradient for Hover */
         }
 
         .watch-btn {
